Added a new string.

--- a/en/Lorem ipsum.properties
+++ b/en/Lorem ipsum.properties
@@ -2,4 +2,5 @@ ui.lorem.test = Lorem
 ui.ipsum.test = ipsum
 ui.dolor.sit.amet = dolor sit amet,
 ui.consectetur.adipiscing.elit = consectetur adipiscing elit,
-ui.sed.do.sentence.end = sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+ui.sed.do.sentence.end = sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+ui.new.string = This is a new string.
